@@ -1,2 +1,2 @@
 export CATALINA_OPTS="-XX:+CMSClassUnloadingEnabled"
-#export JPDA_OPTS="-agentlib:jdwp=transport=dt_socket, address=localhost:1043, server=y, suspend=n"
+export JAVA_OPTS="-Xmx512m -XX:MaxPermSize=256m  -Xdebug -Xrunjdwp:transport=dt_socket,address=8000,server=y,suspend=n"
